--- a/Backend/package.json
+++ b/Backend/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.2.0",
     "cloudinary": "1.23",
     "cors": "^2.8.5",
     "dotenv": "8.6",
     "express": "^4.17.3",
     "express-fileupload": "^1.3.1",
+    "express-validator": "^6.14.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.3.1",
     "multer": "^1.4.4",
     "node": "^17.7.2",
