--- a/Backend/package.json
+++ b/Backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "jest --testEnvironment=node --runInBand ./test",
     "start": "nodemon server.js"
   },
   "keywords": [],
@@ -27,5 +27,8 @@
     "path": "^0.12.7",
     "react-router-dom": "^5.2.0",
     "uuid": "^8.3.2"
+  },
+  "devDependencies": {
+    "jest": "^28.1.0"
   }
 }
